# asr

./: .gitignore  .pre-commit-config.yaml  README.md  TASK.md  inference.py  pyproject.toml  requirements.txt  run.sh  test_clean.sh  test_other.sh  train.py  train.sh
notebooks/: demo_notebook.ipynb
src/configs/: inference_custom.yaml  inference_test_clean.yaml  inference_test_other.yaml  onebatchtest.yaml  train.yaml  train_aug.yaml  train_beam_search.yaml
src/configs/dataloader/: example.yaml
src/configs/datasets/: custom_dir.yaml  example_eval.yaml  librispeech_eval_test_clean.yaml  librispeech_eval_test_other.yaml  librispeech_train.yaml  onebatchtest.yaml
src/configs/metrics/: example.yaml
src/configs/model/: conformer.yaml
src/configs/transforms/: asr.yaml
src/configs/transforms/batch_transforms/: asr.yaml
src/configs/transforms/instance_transforms/: asr.yaml  example.yaml
src/datasets/: base_dataset.py  collate.py  custom_dir_audio_dataset.py  data_utils.py
src/logger/: utils.py
src/loss/: ctc_loss.py
src/metrics/: __init__.py  cer.py  utils.py  wer.py
src/model/: baseline_model.py  conformer_model.py
src/text_encoder/: ctc_text_encoder.py
src/trainer/: base_trainer.py  inferencer.py  trainer.py
src/transforms/: __init__.py  audio_augs.py  augmented_mel.py
src/transforms/wav_augs/: __init__.py  gain.py
