[project]
name = "asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "comet-ml>=3.53.0",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "isort>=6.0.1",
    "matplotlib>=3.10.6",
    "numpy>=1.26.4,<2.2",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
    "soundfile>=0.13.1",
    "torch==2.5.1",
    "torch-audiomentations>=0.12.0",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.1",
    "wandb>=0.22.0",
    "wget>=3.2",
]


[tool.uv]
package = true
python-preference = "managed"

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722"
]
